--- a/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:48:46 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Apr 14 18:21:33 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -749,6 +749,7 @@ authoring.fla.activity.branching.description  =\u03b4\u03b9\u03b1\u03ba\u03bb\u0
 tour.prev  =\u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03b7
 tour.next  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7
 tour.end.tour  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03a0\u03b5\u03c1\u03b9\u03ae\u03b3\u03b7\u03c3\u03b7\u03c2
+label.search.for.courses  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 \u03b3\u03b9\u03b1 \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2/\u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1
 
 
-#======= End labels: Exported 743 labels for el GR =====
+#======= End labels: Exported 744 labels for el GR =====
