--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -533,7 +533,7 @@ authoring.fla.rename.title.prompt  =Please enter the new name for
 authoring.fla.save.sequence.title.prompt  =Please enter a title for the sequence
 authoring.fla.import.part.choose.prompt  =Click on activities to choose them for import
 authoring.fla.folder.not.selected.error  =Please choose a folder
-authoring.fla.title.validation.error  =The title can not contain any of these characters < > ^ * @ % $
+authoring.fla.title.validation.error  =The title must not be blank and must not contain any of these characters < > ^ * @ % $
 authoring.fla.folder.exists.error  =A folder with this name already exists.
 authoring.fla.sequence.exists.error  =A sequence with this name already exists.
 authoring.fla.sequence.save.error  =Error while saving sequence
@@ -599,7 +599,7 @@ authoring.fla.conditions.to.default.branch.confirm  =All remaining conditions wi
 authoring.fla.groups.to.default.branch.confirm  =All remaining groups will be mapped to the default branch
 authoring.fla.range.condition.add.start.error  =The start value can not be within the range of an existing condition
 authoring.fla.range.condition.add.end.error  =The end value can not be within the range of an existing condition
-authoring.fla.group.title.validation.erorr  =Group name can not contain any of these characters < > ^ * @ % $
+authoring.fla.group.title.validation.erorr  =Group name must not be blank and must not contain any of these characters < > ^ * @ % $
 authoring.fla.page.title  =Authoring
 authoring.fla.page.menu.new  =New
 authoring.fla.page.menu.open  =Open
