--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources.properties
@@ -116,6 +116,6 @@ label.search  =Search...
 label.refresh  =Refresh
 label.spreadsheet.options  =Options
 label.activity.completion  =End of activity
-
+message.spreadsheet.marked  =You cannot change the spreadsheet as it has been marked.
 
 #======= End labels: Exported 110 labels for en AU =====
