--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -306,4 +306,7 @@ label.number.learners=Number of Learners
 label.percentage=Percentage
 label.not.answered=Not Answered
 label.other=Other
+label.graph.help=In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark=Lowest Mark:
+label.highest.mark=Highest Mark:
 #======= End labels: Exported 294 labels for en AU =====
