--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -752,4 +752,8 @@ tour.end.tour  =End of tour
 label.search.for.courses  =Search for courses
 
 
+label.save.as.course.grouping  =Save as a Course Grouping
+label.enter.course.grouping.name  =Please enter name for the new course grouping
+label.course.groups.name.not.unique  =Course grouping with such name already exists. Please enter another one.
+
 #======= End labels: Exported 744 labels for en AU =====
