--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -300,13 +300,16 @@ error.import.file.format  =The import file is not an .xml file.
 label.file  =File
 errors.maxfilesize  =File exceeds maximum file size {0}
 label.summary.downloaded  =Summary downloaded
-label.lowest.mark=Lowest Mark
-label.highest.mark=Highest Mark
 label.number.learners=Number of Learners
+label.number.groups.finished=Number of Groups Finished
 label.percentage=Percentage
 label.not.answered=Not Answered
 label.other=Other
 label.graph.help=In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
 label.lowest.mark=Lowest Mark:
 label.highest.mark=Highest Mark:
+label.marks=Marks
+label.number.learners.in.mark.range=Number of Learners in Mark Range
+label.number.groups.in.mark.range=Number of Groups in Mark Range
+label.operation.failed=Operation failed. 
 #======= End labels: Exported 294 labels for en AU =====
