--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -202,6 +202,15 @@ label.tool.output.has.been.changed  =Tool output has changed
 label.operation.failed  =Operation failed
 answers.submitted.none  =Select at least one answer for each of the questions.
 label.summary.downloaded  =Marks file downloaded.
+label.number.learners=Number of Learners
+label.number.groups.finished=Number of Groups Finished
+label.graph.help=In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark=Lowest Mark:
+label.highest.mark=Highest Mark:
+label.question.marks  =Marks
+label.number.learners.in.mark.range=Number of Learners in Mark Range
+label.number.groups.in.mark.range=Number of Groups in Mark Range
+label.average.mark  =Average mark
 
 
 #======= End labels: Exported 196 labels for en AU =====
