--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -202,6 +202,12 @@ label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired.
 label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
 label.authoring.advanced.shuffle.items  =Shuffle questions
 label.summary.downloaded  =Excel file downloaded.
-
+label.number.groups.finished=Number of Groups Finished
+label.graph.help=In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark=Lowest Mark:
+label.highest.mark=Highest Mark:
+label.marks=Marks
+label.number.groups.in.mark.range=Number of Groups in Mark Range
+label.average.mark  =Average mark
 
 #======= End labels: Exported 196 labels for en AU =====
