--- a/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Jul 23 22:50:29 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:26:44 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -57,7 +57,7 @@ rename.resource.error  =\u0394\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af 
 rename.resource.error.miss.vaue  =renameResource(Long resourceID,Integer newName, String resourceType, Integer userID) \u03b1\u03c0\u03b1\u03b9\u03c4\u03bf\u03cd\u03bd \u03c4\u03b9\u03bc\u03ad\u03c2 \u03b3\u03b9\u03b1: resourceID, targetFolderID, resourceType and userID
 rename.resource.unspport  =\u03a4\u03bf LAMS \u03b4\u03b5\u03bd \u03c5\u03c0\u03bf\u03c3\u03c4\u03b7\u03c1\u03af\u03b6\u03b5\u03b9 \u03c4\u03b7 \u03bc\u03b5\u03c4\u03bf\u03bd\u03bf\u03bc\u03b1\u03c3\u03af\u03b1 \u03b5\u03bd\u03cc\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03bc\u03ad\u03c3\u03c9  \u03c4\u03bf\u03c5 \u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03bf\u03cd \u03c0\u03b5\u03c1\u03b9\u03b2\u03ac\u03bb\u03bb\u03bf\u03bd\u03c4\u03bf\u03c2 \u03c4\u03bf\u03c5 \u03c7\u03ce\u03c1\u03bf\u03c5 \u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2.
 folder.already.exist  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7 \u03ad\u03bd\u03b1\u03c2 \u03c6\u03ac\u03ba\u03b5\u03bb\u03bf\u03c2 \u03bc\u03b5 \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1''{0}''.
-organisations  =\u03a4\u03bc\u03ae\u03bc\u03b1\u03c4\u03b1-\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
+organisations  =\u039c\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1
 folders  =\u03a6\u03ac\u03ba\u03b5\u03bb\u03bf\u03b9
 title.lams  =LAMS
 title.login.window  =\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7 - LAMS: \u03a3\u03cd\u03c3\u03c4\u03b7\u03bc\u03b1 \u0394\u03b9\u03b1\u03c7\u03b5\u03af\u03c1\u03b9\u03c3\u03b7\u03c2 \u039c\u03b1\u03b8\u03b7\u03c3\u03b9\u03b1\u03ba\u03ae\u03c2 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
@@ -468,8 +468,8 @@ authoring.fla.default.group.prefix  =\u039f\u03bc\u03ac\u03b4\u03b1
 authoring.fla.default.branching.title  =\u0394\u03b9\u03b1\u03ba\u03bb\u03ac\u03b4\u03c9\u03c3\u03b7
 authoring.fla.default.branch.prefix  =\u039a\u03bb\u03ac\u03b4\u03bf\u03c2
 authoring.fla.default.optional.activity.title  =\u03a0\u03c1\u03bf\u03b1\u03b9\u03c1\u03b5\u03c4\u03b9\u03ba\u03ae \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
-authoring.fla.support.activity.title  =\u03a5\u03c0\u03bf\u03c3\u03c4\u03b7\u03c1\u03b9\u03ba\u03c4\u03b9\u03ba\u03ae \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
-authoring.fla.gate.activity.label  =\u039d\u0391 \u03a3\u03a4\u0391\u039c\u0391\u03a4\u0397\u03a3\u0395\u0399
+authoring.fla.support.activity.title  =\u03a5\u03c0\u03bf\u03c3\u03c4\u03b7\u03c1\u03b9\u03ba\u03c4\u03b9\u03ba\u03ad\u03c2 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2
+authoring.fla.gate.activity.label  =\u03a0\u0395\u03a1\u0399\u039c\u0395\u039d\u0395
 authoring.fla.branching.start.suffix  =\u039d\u03b1 \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03b9
 authoring.fla.branching.end.suffix  =\u03c4\u03ad\u03bb\u03bf\u03c2
 authoring.fla.activity.dialog.title.suffix  =\u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae
@@ -495,7 +495,7 @@ authoring.fla.sequence.validation.issues  =\u039a\u03b1\u03c4\u03ac \u03c4\u03b7
 authoring.fla.save.successful  =\u03a3\u03c5\u03b3\u03c7\u03b1\u03c1\u03b7\u03c4\u03ae\u03c1\u03b9\u03b1! \u03c4\u03bf \u03c3\u03c7\u03ad\u03b4\u03b9\u03cc \u03c3\u03b1\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf \u03ba\u03b1\u03b9 \u03ad\u03c7\u03b5\u03b9 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03c4\u03b5\u03af.
 authoring.fla.liveedit.save.successful  =\u039f\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03b5\u03c6\u03b1\u03c1\u03bc\u03cc\u03c3\u03c4\u03b7\u03ba\u03b1\u03bd \u03bc\u03b5 \u03b5\u03c0\u03b9\u03c4\u03c5\u03c7\u03af\u03b1.
 authoring.fla.navigate.away.confirm  =\u03a4\u03bf \u03c3\u03c7\u03ad\u03b4\u03b9\u03bf \u03c3\u03b1\u03c2 \u03b4\u03b5\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03b5\u03c4\u03b1\u03b9. \\n \u039f\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c0\u03bf\u03c5 \u03ad\u03b3\u03b9\u03bd\u03b1\u03bd \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03c4\u03b5\u03bb\u03b5\u03c5\u03c4\u03b1\u03af\u03b1 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03b8\u03b1 \u03c7\u03b1\u03b8\u03bf\u03cd\u03bd.
-authoring.fla.delete.node.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03c8\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf
+authoring.fla.delete.node.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03c8\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7\u03bd
 authoring.fla.sequence.overwrite.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03b2\u03ad\u03b2\u03b1\u03b9\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b1\u03bd\u03c4\u03b9\u03ba\u03b1\u03c4\u03b1\u03c3\u03c4\u03ae\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b7\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03bf\u03c5\u03c3\u03b1 \u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03af\u03b1;
 authoring.fla.new.folder.title.prompt  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03b3\u03b9\u03b1 \u03ad\u03bd\u03b1 \u03bd\u03ad\u03bf \u03c6\u03ac\u03ba\u03b5\u03bb\u03bf
 authoring.fla.rename.title.prompt  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03bd\u03ad\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03b3\u03b9\u03b1
@@ -724,6 +724,7 @@ label.enter.course.grouping.name  =\u0395\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u0
 label.course.groups.name.not.unique  =\u0397 \u03bf\u03bc\u03b1\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd \u03bc\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7. \u0395\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03ad\u03bd\u03b1 \u03ac\u03bb\u03bb\u03bf.
 label.save.as.course.grouping.hint  =\u039c\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b9\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2 \u03c9\u03c2 "\u039f\u03bc\u03ac\u03b4\u03b5\u03c2 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd" \u03ad\u03c4\u03c3\u03b9 \u03ce\u03c3\u03c4\u03b5 \u03bd\u03b1 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03b7\u03b8\u03bf\u03cd\u03bd \u03ba\u03b1\u03b9 \u03c3\u03b5 \u03ac\u03bb\u03bb\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1. \u0391\u03bd \u03bf\u03b9 \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03ba\u03c1\u03b9\u03b2\u03ce\u03c2 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1, \u03af\u03c3\u03c9\u03c2 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03c4\u03bf \u03ba\u03ac\u03bd\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc. \u0394\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03ac, \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03bf \u03ba\u03bf\u03c5\u03bc\u03c0\u03af \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03c4\u03bf\u03c5\u03c2 \u03b4\u03ce\u03c3\u03b5\u03c4\u03b5 \u03ad\u03bd\u03b1 \u03cc\u03bd\u03bf\u03bc\u03b1 \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03c4\u03b9\u03c2 \u03b5\u03c0\u03b1\u03bd\u03b1\u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c1\u03b3\u03cc\u03c4\u03b5\u03c1\u03b1.
 label.advanced.settings  =\u03a0\u03c1\u03bf\u03b7\u03b3\u03bc\u03ad\u03bd\u03b5\u03c2 \u03c1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
+audit.delete.portrait  =\u03a4\u03bf \u03c0\u03bf\u03c1\u03c4\u03c1\u03ad\u03c4\u03bf \u03b3\u03b9\u03b1 \u03c4\u03bf\u03bd \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7 {0} {1} ({2}) \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03c6\u03b7\u03ba\u03b5. \u03a4\u03bf Id \u03c0\u03bf\u03c1\u03c4\u03c1\u03ad\u03c4\u03bf\u03c5 \u03ae\u03c4\u03b1\u03bd {3}.
 
 
-#======= End labels: Exported 718 labels for el GR =====
+#======= End labels: Exported 719 labels for el GR =====
