--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -755,6 +755,7 @@ audit.live.edit.end  =Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) 
 label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
+authoring.fla.page.ld.title.desc=Click to display sequence details
 
 #====== Templates	
 authoring.msg.close.cancel.save=Do you want to close this window without saving?	
